--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -27,13 +27,20 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@swc/core": "^1.2.64",
+    "@types/inquirer": "^7.3.3",
+    "@types/progress": "^2.0.5",
+    "@types/tar": "^4.0.5",
     "@types/yargs": "^17.0.2",
     "eslint": "^7.30.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "colorette": "^1.2.2",
+    "inquirer": "^8.1.2",
     "pretty-ms": "^7.0.1",
+    "progress": "^2.0.3",
     "rollup": "2.52.7",
+    "tar": "^6.1.8",
     "yargs": "^17.0.1"
   }
 }
