--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -39,9 +39,11 @@
     "ejs": "^3.1.6",
     "fs-jetpack": "^4.1.0",
     "import-meta-resolve": "^1.1.1",
+    "inquirer": "^8.1.2",
     "js-yaml": "^4.1.0",
     "jscodeshift": "^0.13.0",
     "lodash": "^4.17.21",
+    "progress": "^2.0.3",
     "rollup": "2.52.7",
     "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
     "rollup-plugin-terser": "^7.0.2",
@@ -50,7 +52,9 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
+    "@types/inquirer": "^7.3.3",
     "@types/js-yaml": "^4.0.2",
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@types/progress": "^2.0.5"
   }
 }
