--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -37,6 +37,7 @@
     "colorette": "^1.2.2",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "execa": "^5.1.1",
     "fs-jetpack": "^4.1.0",
     "import-meta-resolve": "^1.1.1",
     "inquirer": "^8.1.2",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
+    "@types/execa": "^2.0.0",
     "@types/inquirer": "^7.3.3",
     "@types/js-yaml": "^4.0.2",
     "@types/lodash": "^4.14.172",
