--- a/.github/workflows/cd-shared.yml
+++ b/.github/workflows/cd-shared.yml
@@ -64,7 +64,7 @@ jobs:
         run: yarn workspace @abstractflo/atlas-shared build
 
       - name: Push new code
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/version-3-1-refactor' # change this to `master` after release
         run: |
           REPO="https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
 
